Fixed Gradle Base64 errors